force-app/main/default/objects/Public_Event__c/fields/Funds_Raised__c.field-meta.xml
<CustomField>
    <fullName>Funds_Raised__c</fullName>
    <label>Funds Raised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>