force-app/main/default/objects/Public_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sporting Event</fullName>
            </value>
            <value>
                <fullName>Concert</fullName>
            </value>
            <value>
                <fullName>Art Exhibition</fullName>
            </value>
            <value>
                <fullName>Auction</fullName>
            </value>
            <value>
                <fullName>Gala</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>