force-app/main/default/objects/Public_Event__c/fields/Volunteer_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Assigned</label>
    <referenceTo>Volunteers__c</referenceTo>
    <relationshipLabel>Public Events</relationshipLabel>
    <relationshipName>Public_Events</relationshipName>
    <type>Lookup</type>
</CustomField>